# python-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
test/: test_template.py
